# sb_websocket_rust

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/client/: handshake.rs  mod.rs  run.rs
src/connection/: message.rs  mod.rs  session.rs  stream.rs
src/messaging/: decoder.rs  mod.rs
src/server/: connection.rs  handshake.rs  mod.rs  run.rs
src/ui/: app.rs  mod.rs  render.rs
src/websocket/: encoder.rs  key.rs  mod.rs
websocket_chat_cli/: Cargo.toml
