[package]
name = "sb_websocket_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
sha1 = "0.10.6"
base64 = { version = "0.21.5", features = [] }
rand = { version = "0.8.5", features = [] }
ratatui = { version = "0.25.0", features = ["all-widgets"] }
crossterm = "0.27.0"
tui-textarea = "0.4.0"
